[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/theme/fonts/input_default.tres" type="Theme" id=1]
[ext_resource path="res://assets/theme/fonts/montserrat/Montserrat-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/theme/fonts/default_font_italics.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/theme/davesTheme.theme" type="Theme" id=4]
[ext_resource path="res://src/UI/loginOrCreate.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 54
extra_spacing_top = 4
extra_spacing_bottom = 4
extra_spacing_char = 4
extra_spacing_space = 2
font_data = ExtResource( 2 )

[node name="loginOrCreate" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.0
margin_top = 8.0
margin_bottom = -184.0
size_flags_horizontal = 10
size_flags_vertical = 10
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [ 520.0 ],
"_edit_vertical_guides_": [ 0.0, 1920.0 ]
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -8.0
margin_right = 1.0
margin_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 600, 200 )
rect_pivot_offset = Vector2( -6, -6 )
size_flags_horizontal = 6
size_flags_vertical = 6
theme = ExtResource( 4 )
alignment = 1

[node name="guide" type="Label" parent="VBoxContainer"]
margin_right = 1919.0
margin_bottom = 100.0
rect_min_size = Vector2( 400, 100 )
rect_pivot_offset = Vector2( 960, 11 )
size_flags_horizontal = 9
size_flags_vertical = 9
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 1 )
text = "Enter a Username"
align = 1
valign = 2
percent_visible = -0.0714286

[node name="UsernameText" type="LineEdit" parent="VBoxContainer"]
margin_left = 659.0
margin_top = 266.0
margin_right = 1259.0
margin_bottom = 346.0
rect_min_size = Vector2( 600, 80 )
rect_pivot_offset = Vector2( 291, 43 )
mouse_filter = 1
size_flags_horizontal = 6
size_flags_vertical = 6
theme = ExtResource( 1 )
align = 1
max_length = 200
placeholder_text = "Nickname"
caret_blink = true

[node name="menuList" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 512.0
margin_right = 1919.0
margin_bottom = 890.0
input_pass_on_modal_close_click = false
size_flags_horizontal = 7
size_flags_vertical = 7
alignment = 1

[node name="home" type="Button" parent="VBoxContainer/menuList"]
margin_left = 196.0
margin_top = 139.0
margin_right = 596.0
margin_bottom = 239.0
rect_min_size = Vector2( 400, 100 )
size_flags_horizontal = 6
size_flags_vertical = 6
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "Private"

[node name="Button" type="Button" parent="VBoxContainer/menuList"]
margin_left = 809.0
margin_top = 155.0
margin_right = 1109.0
margin_bottom = 223.0
rect_min_size = Vector2( 300, 0 )
size_flags_vertical = 4
flat = true

[node name="online" type="Button" parent="VBoxContainer/menuList"]
margin_left = 1322.0
margin_top = 139.0
margin_right = 1722.0
margin_bottom = 239.0
rect_min_size = Vector2( 400, 100 )
size_flags_horizontal = 6
size_flags_vertical = 6
text = "Public"

[connection signal="text_entered" from="VBoxContainer/UsernameText" to="." method="_on_UsernameText_text_entered"]
[connection signal="button_down" from="VBoxContainer/menuList/home" to="." method="_on_home_button_down"]
[connection signal="button_down" from="VBoxContainer/menuList/online" to="." method="_on_online_button_down"]
